2015-10-15 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.5.1

2015-07-16 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: libxkbcommon  required

2015-07-02 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.5.0

2015-06-09 Treeve Jelbert <treeve@sourcemage.org>
	* firebird.patch: update for firebird3

2015-06-02 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.4.2

2015-05-26 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: depend on -sub CXX gcc

2015-05-18 Treeve Jelbert <treeve@sourcemage.org>
	* BUILD: clean up

2015-05-15 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: add freetype2
	  also prepare for qt5.5

2015-04-24 Thomas Orgis <sobukus@sourcemage.org>
	* CONFLICTS: added, conflicts with itself during build

2015-02-23 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.4.1

2015-02-11 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: UDEV => DEVICE-MANAGER

2014-12-13 Treeve Jelbert <treeve@sourcemage.org>
	* firebird.patch, PRE_BUILD: fix detection of firebird
	* BUILD: fix prefix

2014-12-10 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.4.0

2014-09-16 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.3.2

2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
        * DEPENDS: openssl => SSL
	  fix openssl flags
        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL

2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.3.1

2014-05-20 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.3.0
	* qtbase: update patch
	* CONFIGURE, BUILD: delete obsolete -javascript-jit switch
	* DEPENDS: add optional harfbuzz, only support unixodbc

2014-02-07 Treeve Jelbert <treeve@sourcemage.org>
	* PRE_BUILD: add an entry for qt5 to /etc/ld.so.conf

2014-02-06 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: add optional mtdev

2014-02-05 Treeve Jelbert <treeve@sourcemage.org> 
	* DETAILS: version 5.2.1 (stable)
	* BUILD: delete DEMOS
