@@ -1,25 +1,26 @@
-From c784aba62c64b7966c4365e7537daf6bddee0f2e Mon Sep 17 00:00:00 2001
+From 75ee27814e3ad2ae22ce91cc4990312bef2f4526 Mon Sep 17 00:00:00 2001
 From: Treeve Jelbert <treeve@sourcemage.org>
 Date: Mon, 9 May 2011 21:06:05 +0200
 Subject: [PATCH] fix config tests for firebird fix linking with firebird it
  also use -lpthread now
 
+firebird uses libtommath
 ---
  config.tests/unix/ibase/ibase.pro    | 2 +-
  src/sql/drivers/ibase/qsql_ibase.pri | 3 ++-
  2 files changed, 3 insertions(+), 2 deletions(-)
 
 diff --git a/config.tests/unix/ibase/ibase.pro b/config.tests/unix/ibase/ibase.pro
-index 5878785..2e2128e 100644
+index 5878785..2c165a2 100644
 --- a/config.tests/unix/ibase/ibase.pro
 +++ b/config.tests/unix/ibase/ibase.pro
 @@ -1,3 +1,3 @@
  SOURCES = ibase.cpp
  CONFIG -= qt dylib
 -LIBS += -lgds
-+LIBS += -lfbclient -lpthread
++LIBS += -lfbclient -ltommath -lpthread
 diff --git a/src/sql/drivers/ibase/qsql_ibase.pri b/src/sql/drivers/ibase/qsql_ibase.pri
-index ef3b68d..5cb9169 100644
+index ef3b68d..dfedbd1 100644
 --- a/src/sql/drivers/ibase/qsql_ibase.pri
 +++ b/src/sql/drivers/ibase/qsql_ibase.pri
 @@ -2,7 +2,8 @@ HEADERS += $$PWD/qsql_ibase_p.h
@@ -28,10 +29,10 @@ index ef3b68d..5cb9169 100644
  unix {
 -    !contains(LIBS, .*gds.*):!contains(LIBS, .*libfb.*):LIBS += -lgds
 +    !contains(LIBS, .*gds.*):!contains(LIBS, .*fb.*):LIBS += -lfbclient
-+     LIBS +=  -lpthread
++     LIBS +=  -ltommath -lpthread
  } else {
      !contains(LIBS, .*gds.*):!contains(LIBS, .*fbclient.*) {
          LIBS += -lgds32_ms
 -- 
-2.4.1
+2.7.0
 
