@@ -1,3 +1,6 @@
+2016-01-07 Treeve Jelbert <treeve@sourcemage.org>
+	* firebird.patch: updated
+
 2015-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.5.1
 
